Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14390

DHCPSVC is not allowed to be stopped

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • Services
    • None

    Description

      0.4.8-RC-16-gaf545fe gcc dbg does not allow the DHCPSVC to be stopped due to

      base/services/dhcpcsvc/dhcpcsvc.c	 331     ServiceStatus.dwControlsAccepted = 0;

      Windows XP and 2k3sp2 (and Win7) do not forbid this and from a security pov,
      I think it's very important that user has the power to stop all network related services at his will. (Just imagine there would lurk an unnoted sec-vuln within)
      User must have power to mitigate then.

      I would insist on that feature even if service would be not written to perfection yet and still having issues in the shutdown sequence.

      Attachments

        Issue Links

          Activity

            People

              ekohl ekohl
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: