[DHCPCSVC] Add the ability to stop the DHCP client - Use a stop event to terminate the dispatch loop. - Report to the services manager that the service can be stopped or shut-down while it is running.

CORE-14390